jQuery - 슬라이드 수행처리

--- a/c_project_01/code/index.html
+++ b/c_project_01/code/index.html
@@ -11,7 +11,11 @@
     // window.location = "./html/main.html";
     // window.location = "./html/main_v2.html";
     // window.location = "./html/main_v3.html";
-    window.location = "./html/main_v4.html";
+    var baseUrl = './html/';
+    var url = 'main_v4.html';
+        // url = 'importTest.html';
+
+    location = baseUrl + url;
   </script>
 </body>
 </html>
