--- a/b_step_06/html/b_01_importHtml.html
+++ b/b_step_06/html/b_01_importHtml.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/b_01_importHtml.css">
-  <script src="../js/src/modernizr-custom.js"></script>
+  
+  <script src="../js/common/modernizr-custom.js"></script>
   
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
@@ -29,7 +30,9 @@
     <h2>html문서 분리하기</h2>
     <div class="ex_wrap">
       <div id="box_01"></div>
-      <div id="box_02"></div>
+      <div id="box_02">
+        <button type="button">클릭하면 내용이 나타납니다.</button>
+      </div>
       <div id="box_03"></div>
     </div>
   </div>
