jQuery import html 문서 수행1

--- a/c_project_01/code/index.html
+++ b/c_project_01/code/index.html
@@ -12,8 +12,9 @@
     // window.location = "./html/main_v2.html";
     // window.location = "./html/main_v3.html";
     var baseUrl = './html/';
-    var url = 'main_v4.html';
+    var url = 'main_v.html';
         // url = 'importTest.html';
+        url = 'main_v5.html';
 
     location = baseUrl + url;
   </script>
