jQuery - 반응형을 진행하기 위한 기본 체크

--- a/b_step_06/html/b_02_responsiv_js.html
+++ b/b_step_06/html/b_02_responsiv_js.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- a_content.html -->
+<!-- b_02_responsiv_js.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
@@ -12,13 +12,13 @@
   
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/a_content.css">
+  <link rel="stylesheet" href="../css/src/b_02_responsiv_js.css">
   <script src="../js/common/modernizr-custom.js"></script>
   
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   
-  <title>a_content</title>
+  <title>b_02_responsiv_js</title>
 </head>
 <body>
   <!-- layout -->
@@ -26,19 +26,14 @@
   <h1><a href="./a_content.html">jQuery 기초</a></h1>
   <hr />
   <div class="part">
-    <h2>기타 추가 내용이해</h2>
-    <div class="ex_wrap">
-      <ul>
-        <li><a href="./b_01_importHtml.html">html문서 분리하기</a></li>
-        <li><a href="./b_02_responsiv_js.html">반응형웹 제작을 위한 js처리</a></li>
-      </ul>
-    </div>
+    <h2>사용할 기능</h2>
+    <div class="ex_wrap"></div>
   </div>
 </div>
 
   <!-- javascript -->
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
-  <script src="../js/src/a_content.js"></script>
+  <script src="../js/src/b_02_responsiv_js.js"></script>
 </body>
 </html>
