jquery-반응형페이지 예시-header

--- a/c_project_01/code/html/main_v5.html
+++ b/c_project_01/code/html/main_v5.html
@@ -35,6 +35,7 @@
 
     <script src="../js/common/jquery-3.6.0.min.js"></script>
     <script src="../js/common/jquery-ui.min.js"></script>
+    <script src="../js/common/jquery_rwd_set.js"></script>
     <script src="../js/src/main_import_data.js"></script>
   </body>
 </html>
