jquery 데이터 javascrit로 변환하기

--- a/b_step_07/html/main.html
+++ b/b_step_07/html/main.html
@@ -5,13 +5,44 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    ul.act {
+      background-color: rgba(200,255,200,1);
+    }
+    ul.list {
+      list-style: decimal;
+    }
+    li.on { background-color: #fac;}
+  </style>
 </head>
 <body>
-  
+
+  <div id="wrap">
+    <header id="headBox">
+      <h1>site name</h1>
+      <ul class="navigation act list">
+        <li> <a href="http://naver.com"> link_01</a> </li>
+        <li> <a href="#"> link_02</a> </li>
+        <li> <a href="#"> link_03</a> </li>
+        <li> <a href="#"> link_04</a> </li>
+        <li> <a href="#"> link_05</a> </li>
+      </ul>
+    </header>
+
+  </div>
+
+
+
   <!-- script -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-  <script src="../js/src/jquery_test.js"></script>
-  <script src="../js/src/javascript_test.js"></script>
+  <!-- jquery to js part1 -->
+  <!-- <script src="../js/src/jquery_test.js"></script> -->
+  <!-- <script src="../js/src/javascript_test.js"></script> -->
+  <!-- <script src="../js/src/javascript_test-dist.js"></script> -->
+
+  <!-- <script src="../js/src/jquery_test2.js"></script> -->
+  <script src="../js/src/javascript_test2.js"></script>
+  <!-- <script src="../js/src/javascript_test2-dist.js"></script> -->
 </body>
 </html>
